<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="63dp"
        android:layout_width="wrap_content"
        android:hint="@string/input_text"
        tools:ignore="LabelFor"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnToast"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_toast"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
    />

    <Button
        android:id="@+id/btnTela2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_tela_dois"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
    />

    <Button
        android:id="@+id/btnParcel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_parcel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
    />

    <Button
        android:id="@+id/btnSerializable"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_serializable"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
    />


</LinearLayout>